refactor uniflow with new config interface

--- a/example/model/huggingface_model.ipynb
+++ b/example/model/huggingface_model.ipynb
@@ -40,7 +40,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Since the GPL-licensed package `unidecode` is not installed, using Python's `unicodedata` package which yields worse results.\n",
       "/opt/conda/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
@@ -63,6 +62,7 @@
     "from uniflow.client import Client\n",
     "from uniflow.flow.flow_factory import FlowFactory\n",
     "from uniflow.model.server import ModelServerFactory\n",
+    "from uniflow.config import HuggingfaceConfig\n",
     "from uniflow.viz import Viz\n",
     "\n",
     "load_dotenv()"
@@ -77,14 +77,11 @@
      "data": {
       "text/plain": [
        "['LinearFlow',\n",
+       " 'FewShotModelFlow',\n",
        " 'ModelFlow',\n",
        " 'OpenAIJsonModelFlow',\n",
        " 'HuggingFaceModelFlow',\n",
-       " 'DataGenFlow',\n",
-       " 'DataGenTextFlow',\n",
-       " 'TextPlusDataGenFlow',\n",
-       " 'SelfInstructedGenFlow',\n",
-       " 'PDFSelfInstructedGenFlow']"
+       " 'LMQGModelFlow']"
       ]
      },
      "execution_count": 3,
@@ -104,7 +101,7 @@
     {
      "data": {
       "text/plain": [
-       "['OpenAIModelServer', 'HuggingfaceModelServer']"
+       "['OpenAIModelServer', 'HuggingfaceModelServer', 'LMQGModelServer']"
       ]
      },
      "execution_count": 4,
@@ -125,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,28 +170,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(\"HuggingFaceModelFlow\")"
+    "config = HuggingfaceConfig()\n",
+    "client = Client(config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:10<00:00,  5.12s/it]\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:24<00:00, 12.40s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['instruction: Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\\ncontext: The quick brown fox jumps over the lazy dog.\\nquestion: What is the color of the fox?\\nanswer: brown.\\ncontext: The quick brown fox jumps over the lazy black dog.\\nquestion: What is the color of the dog?\\nanswer: black.\\ncontext: My name is bobby and I am a talent software engineer working on AI/ML.\\nquestion: What is your profession?\\nanswer: software engineer']\n",
-      "[\"instruction: Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\\ncontext: The quick brown fox jumps over the lazy dog.\\nquestion: What is the color of the fox?\\nanswer: brown.\\ncontext: The quick brown fox jumps over the lazy black dog.\\nquestion: What is the color of the dog?\\nanswer: black.\\ncontext: It was a sunny day and the sky color is blue.\\nquestion: Is it raining outside?\\nanswer: No, it's not raining because the sky is blue.\"]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [01:57<00:00, 58.91s/it]\n",
+      "  0%|          | 0/2 [00:00<?, ?it/s]/opt/conda/envs/uniflow/lib/python3.10/site-packages/bitsandbytes/nn/modules.py:226: UserWarning: Input type into Linear4bit is torch.float16, but bnb_4bit_compute_type=torch.float32 (default). This will lead to slow inference or training speed.\n",
+      "  warnings.warn(f'Input type into Linear4bit is torch.float16, but bnb_4bit_compute_type=torch.float32 (default). This will lead to slow inference or training speed.')\n",
+      "100%|██████████| 2/2 [00:04<00:00,  2.04s/it]\n"
      ]
     }
    ],
@@ -204,19 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': [\"instruction: Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\\ncontext: The quick brown fox jumps over the lazy dog.\\nquestion: What is the color of the fox?\\nanswer: brown.\\ncontext: The quick brown fox jumps over the lazy black dog.\\nquestion: What is the color of the dog?\\nanswer: black.\\ncontext: It was a sunny day and the sky color is blue.\\nquestion: Is it raining outside?\\nanswer: No, it's not raining because the sky is blue.\"]}],\n",
-       "  'root': <uniflow.node.node.Node at 0x7f6b4515d7b0>},\n",
-       " {'output': [{'response': ['instruction: Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\\ncontext: The quick brown fox jumps over the lazy dog.\\nquestion: What is the color of the fox?\\nanswer: brown.\\ncontext: The quick brown fox jumps over the lazy black dog.\\nquestion: What is the color of the dog?\\nanswer: black.\\ncontext: My name is bobby and I am a talent software engineer working on AI/ML.\\nquestion: What is your profession?\\nanswer: software engineer']}],\n",
-       "  'root': <uniflow.node.node.Node at 0x7f6b451698d0>}]"
+       "[{'output': [{'response': [\"instruction: Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\\ncontext: The quick brown fox jumps over the lazy dog.\\nquestion: What is the color of the fox?\\nanswer: brown.\\ncontext: The quick brown fox jumps over the lazy black dog.\\nquestion: What is the color of the dog?\\nanswer: black.\\ncontext: It was a sunny day and the sky color is blue.\\nquestion: Is it raining outside?\\nanswer: No, it's not raining because the sky is blue.\"],\n",
+       "    'error': 'Failed to deserialize 0 examples'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x7fda41dc5750>},\n",
+       " {'output': [{'response': ['instruction: Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\\ncontext: The quick brown fox jumps over the lazy dog.\\nquestion: What is the color of the fox?\\nanswer: brown.\\ncontext: The quick brown fox jumps over the lazy black dog.\\nquestion: What is the color of the dog?\\nanswer: black.\\ncontext: My name is bobby and I am a talent software engineer working on AI/ML.\\nquestion: What is your profession?\\nanswer: software engineer'],\n",
+       "    'error': 'Failed to deserialize 0 examples'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x7fdb150bfb80>}]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +312,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f6b446f1990>"
+       "<graphviz.graphs.Digraph at 0x7fd9e60f4520>"
       ]
      },
      "metadata": {},
@@ -331,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -363,15 +357,15 @@
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"170.28\" cy=\"-90\" rx=\"29.8\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"170.28\" y=\"-86.3\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
        "</g>\n",
-       "<!-- thread_1/huggingface_model_op_1 -->\n",
+       "<!-- thread_0/huggingface_model_op_2 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>thread_1/huggingface_model_op_1</title>\n",
+       "<title>thread_0/huggingface_model_op_2</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"170.28\" cy=\"-18\" rx=\"170.07\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"170.28\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">thread_1/huggingface_model_op_1</text>\n",
+       "<text text-anchor=\"middle\" x=\"170.28\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/huggingface_model_op_2</text>\n",
        "</g>\n",
-       "<!-- root&#45;&gt;thread_1/huggingface_model_op_1 -->\n",
+       "<!-- root&#45;&gt;thread_0/huggingface_model_op_2 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>root&#45;&gt;thread_1/huggingface_model_op_1</title>\n",
+       "<title>root&#45;&gt;thread_0/huggingface_model_op_2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M170.28,-71.7C170.28,-63.98 170.28,-54.71 170.28,-46.11\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"173.78,-46.1 170.28,-36.1 166.78,-46.1 173.78,-46.1\"/>\n",
        "</g>\n",
@@ -379,7 +373,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f6b4515e5c0>"
+       "<graphviz.graphs.Digraph at 0x7fd9e5e68040>"
       ]
      },
      "metadata": {},
@@ -389,13 +383,6 @@
    "source": [
     "display(graph)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
