--- a/example/model/openai_json_model.ipynb
+++ b/example/model/openai_json_model.ipynb
@@ -40,7 +40,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Since the GPL-licensed package `unidecode` is not installed, using Python's `unicodedata` package which yields worse results.\n",
       "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
@@ -63,6 +62,7 @@
     "from uniflow.client import Client\n",
     "from uniflow.flow.flow_factory import FlowFactory\n",
     "from uniflow.model.model import ModelServerFactory\n",
+    "from uniflow.config import OpenAIJsonConfig\n",
     "from uniflow.viz import Viz\n",
     "\n",
     "load_dotenv()"
@@ -79,11 +79,9 @@
        "['LinearFlow',\n",
        " 'ModelFlow',\n",
        " 'OpenAIJsonModelFlow',\n",
-       " 'DataGenFlow',\n",
-       " 'DataGenTextFlow',\n",
-       " 'TextPlusDataGenFlow',\n",
-       " 'SelfInstructedGenFlow',\n",
-       " 'PDFSelfInstructedGenFlow']"
+       " 'HuggingFaceModelFlow',\n",
+       " 'LMQGModelFlow',\n",
+       " 'FewShotModelFlow']"
       ]
      },
      "execution_count": 3,
@@ -103,7 +101,7 @@
     {
      "data": {
       "text/plain": [
-       "['OpenAIModelServer', 'HuggingfaceModelServer']"
+       "['OpenAIModelServer', 'HuggingfaceModelServer', 'LMQGModelServer']"
       ]
      },
      "execution_count": 4,
@@ -156,14 +154,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(\"OpenAIJsonModelFlow\")"
+    "config = OpenAIJsonConfig()\n",
+    "client = Client(config)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:05<00:00,  2.85s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "output = client.run(data)"
    ]
@@ -177,14 +184,9 @@
      "data": {
       "text/plain": [
        "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What was the weather like and what color was the sky?',\n",
-       "   'answer': 'The weather was sunny and the sky was blue.'},\n",
-       "  {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What color is the sky on a sunny day?',\n",
-       "   'answer': 'Blue'},\n",
-       "  {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What color is the sky on a sunny day?',\n",
-       "   'answer': 'The sky color is blue on a sunny day.'}]}"
+       "   'question': 'What color was the sky on the sunny day?',\n",
+       "   'answer': 'The sky color was blue on the sunny day.'}],\n",
+       " 'error': 'Failed to deserialize 0 examples'}"
       ]
      },
      "execution_count": 8,
@@ -252,7 +254,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x11b03c340>"
+       "<graphviz.graphs.Digraph at 0x1057b3e50>"
       ]
      },
      "metadata": {},
@@ -296,15 +298,15 @@
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"141.43\" cy=\"-90\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"141.43\" y=\"-84.95\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
        "</g>\n",
-       "<!-- thread_1/openai_json_model_op_1 -->\n",
+       "<!-- thread_0/openai_json_model_op_2 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>thread_1/openai_json_model_op_1</title>\n",
+       "<title>thread_0/openai_json_model_op_2</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"141.43\" cy=\"-18\" rx=\"141.43\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"141.43\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">thread_1/openai_json_model_op_1</text>\n",
+       "<text text-anchor=\"middle\" x=\"141.43\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/openai_json_model_op_2</text>\n",
        "</g>\n",
-       "<!-- root&#45;&gt;thread_1/openai_json_model_op_1 -->\n",
+       "<!-- root&#45;&gt;thread_0/openai_json_model_op_2 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>root&#45;&gt;thread_1/openai_json_model_op_1</title>\n",
+       "<title>root&#45;&gt;thread_0/openai_json_model_op_2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M141.43,-71.7C141.43,-64.41 141.43,-55.73 141.43,-47.54\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"144.93,-47.62 141.43,-37.62 137.93,-47.62 144.93,-47.62\"/>\n",
        "</g>\n",
@@ -312,7 +314,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x11b03fb80>"
+       "<graphviz.graphs.Digraph at 0x1058eabc0>"
       ]
      },
      "metadata": {},
@@ -322,13 +324,6 @@
    "source": [
     "display(graph)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
