--- a/example/model/self_instruct_few_shot_html_source.ipynb
+++ b/example/model/self_instruct_few_shot_html_source.ipynb
@@ -46,6 +46,7 @@
     "import os\n",
     "import pandas as pd\n",
     "from uniflow.client import Client\n",
+    "from uniflow.config import OpenAIFewShotConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n"
    ]
   },
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +131,7 @@
        " {'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.'}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,23 +150,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(\"FewShotModelFlow\")"
+    "config = OpenAIFewShotConfig()\n",
+    "client = Client(config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:03<00:00,  1.09s/it]\n"
+      "100%|██████████| 3/3 [00:05<00:00,  1.82s/it]\n"
      ]
     }
    ],
@@ -175,48 +177,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'output': [{'response': [{'context': 'Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.',\n",
-       "      'question': 'how much information do the events have in terms of bits?',\n",
-       "      'answer': 'the events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.'},\n",
-       "     {'context': 'Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.',\n",
-       "      'question': 'the surrounding',\n",
-       "      'answer': 'indicates that one event has approximately 5.7 bits of information.'},\n",
-       "     {'context': 'Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.',\n",
-       "      'question': 'what is the amount of information for the events described?',\n",
-       "      'answer': 'the events have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.'}],\n",
+       "      'question': 'how many bits of information do the events described have?',\n",
+       "      'answer': 'the events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.'}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x28c4cb580>},\n",
+       "  'root': <uniflow.node.node.Node at 0x2a86f0f40>},\n",
        " {'output': [{'response': [{'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.',\n",
-       "      'question': 'what represents the degree of surprise or the abstract possibility of an event?',\n",
-       "      'answer': 'information.'},\n",
-       "     {'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.',\n",
-       "      'question': 'what concept do thought experiments propose in describing the degree of surprise or possibility of an event?',\n",
-       "      'answer': 'the concept proposes that information represents the degree of surprise or the abstract possibility of the event.'},\n",
-       "     {'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.',\n",
-       "      'question': 'what is the relationship between information and surprise in thought experiments?',\n",
-       "      'answer': 'information represents the degree of surprise or the abstract possibility of the event in thought experiments.'}],\n",
+       "      'question': 'what is information used to represent in thought experiments?',\n",
+       "      'answer': 'the degree of surprise or the abstract possibility of the event.'}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x28c4ea020>},\n",
+       "  'root': <uniflow.node.node.Node at 0x2a871b9a0>},\n",
        " {'output': [{'response': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
-       "      'question': 'who introduced the concept of information entropy for the first time in 1948?',\n",
-       "      'answer': 'claude e. shannon.'},\n",
-       "     {'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
-       "      'question': 'who introduced the concept of information entropy in 1948?',\n",
-       "      'answer': 'claude e. shannon.'},\n",
-       "     {'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
        "      'question': 'who published a mathematical theory of communication in 1948?',\n",
        "      'answer': 'claude e. shannon.'}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x28c4cb670>}]"
+       "  'root': <uniflow.node.node.Node at 0x2a86f1060>}]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -267,53 +251,17 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Any notion of information we develop must conf...</td>\n",
-       "      <td>how much information do the events have in ter...</td>\n",
-       "      <td>the events have 0 bits, 2 bits, 5.7 bits, and ...</td>\n",
+       "      <td>how many bits of information do the events des...</td>\n",
+       "      <td>the events have 0 bits, 2 bits, ~5.7 bits, and...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Any notion of information we develop must conf...</td>\n",
-       "      <td>the surrounding</td>\n",
-       "      <td>indicates that one event has approximately 5.7...</td>\n",
+       "      <td>If we read through these thought experiments, ...</td>\n",
+       "      <td>what is information used to represent in thoug...</td>\n",
+       "      <td>the degree of surprise or the abstract possibi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Any notion of information we develop must conf...</td>\n",
-       "      <td>what is the amount of information for the even...</td>\n",
-       "      <td>the events have \\(0\\textrm{ bits}\\), \\(2\\textr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>If we read through these thought experiments, ...</td>\n",
-       "      <td>what represents the degree of surprise or the ...</td>\n",
-       "      <td>information.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>If we read through these thought experiments, ...</td>\n",
-       "      <td>what concept do thought experiments propose in...</td>\n",
-       "      <td>the concept proposes that information represen...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>If we read through these thought experiments, ...</td>\n",
-       "      <td>what is the relationship between information a...</td>\n",
-       "      <td>information represents the degree of surprise ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>In 1948, Claude E. Shannon published A Mathema...</td>\n",
-       "      <td>who introduced the concept of information entr...</td>\n",
-       "      <td>claude e. shannon.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>In 1948, Claude E. Shannon published A Mathema...</td>\n",
-       "      <td>who introduced the concept of information entr...</td>\n",
-       "      <td>claude e. shannon.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
        "      <td>In 1948, Claude E. Shannon published A Mathema...</td>\n",
        "      <td>who published a mathematical theory of communi...</td>\n",
        "      <td>claude e. shannon.</td>\n",
@@ -325,39 +273,21 @@
       "text/plain": [
        "                                             context  \\\n",
        "0  Any notion of information we develop must conf...   \n",
-       "1  Any notion of information we develop must conf...   \n",
-       "2  Any notion of information we develop must conf...   \n",
-       "3  If we read through these thought experiments, ...   \n",
-       "4  If we read through these thought experiments, ...   \n",
-       "5  If we read through these thought experiments, ...   \n",
-       "6  In 1948, Claude E. Shannon published A Mathema...   \n",
-       "7  In 1948, Claude E. Shannon published A Mathema...   \n",
-       "8  In 1948, Claude E. Shannon published A Mathema...   \n",
+       "1  If we read through these thought experiments, ...   \n",
+       "2  In 1948, Claude E. Shannon published A Mathema...   \n",
        "\n",
        "                                            question  \\\n",
-       "0  how much information do the events have in ter...   \n",
-       "1                                    the surrounding   \n",
-       "2  what is the amount of information for the even...   \n",
-       "3  what represents the degree of surprise or the ...   \n",
-       "4  what concept do thought experiments propose in...   \n",
-       "5  what is the relationship between information a...   \n",
-       "6  who introduced the concept of information entr...   \n",
-       "7  who introduced the concept of information entr...   \n",
-       "8  who published a mathematical theory of communi...   \n",
+       "0  how many bits of information do the events des...   \n",
+       "1  what is information used to represent in thoug...   \n",
+       "2  who published a mathematical theory of communi...   \n",
        "\n",
        "                                              answer  \n",
-       "0  the events have 0 bits, 2 bits, 5.7 bits, and ...  \n",
-       "1  indicates that one event has approximately 5.7...  \n",
-       "2  the events have \\(0\\textrm{ bits}\\), \\(2\\textr...  \n",
-       "3                                       information.  \n",
-       "4  the concept proposes that information represen...  \n",
-       "5  information represents the degree of surprise ...  \n",
-       "6                                 claude e. shannon.  \n",
-       "7                                 claude e. shannon.  \n",
-       "8                                 claude e. shannon.  "
+       "0  the events have 0 bits, 2 bits, ~5.7 bits, and...  \n",
+       "1  the degree of surprise or the abstract possibi...  \n",
+       "2                                 claude e. shannon.  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,13 +313,6 @@
     "\n",
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
