--- a/example/model/few_shot_model.ipynb
+++ b/example/model/few_shot_model.ipynb
@@ -40,7 +40,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Since the GPL-licensed package `unidecode` is not installed, using Python's `unicodedata` package which yields worse results.\n",
       "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
@@ -62,6 +61,7 @@
     "\n",
     "from uniflow.client import Client\n",
     "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.config import OpenAIFewShotConfig\n",
     "from uniflow.viz import Viz\n",
     "\n",
     "load_dotenv()"
@@ -76,15 +76,11 @@
      "data": {
       "text/plain": [
        "['LinearFlow',\n",
+       " 'FewShotModelFlow',\n",
        " 'ModelFlow',\n",
        " 'OpenAIJsonModelFlow',\n",
        " 'HuggingFaceModelFlow',\n",
-       " 'FewShotModelFlow',\n",
-       " 'DataGenFlow',\n",
-       " 'DataGenTextFlow',\n",
-       " 'TextPlusDataGenFlow',\n",
-       " 'SelfInstructedGenFlow',\n",
-       " 'PDFSelfInstructedGenFlow']"
+       " 'LMQGModelFlow']"
       ]
      },
      "execution_count": 3,
@@ -121,14 +117,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(\"FewShotModelFlow\")"
+    "config = OpenAIFewShotConfig()\n",
+    "client = Client(config)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:02<00:00,  1.26s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "output = client.run(data)"
    ]
@@ -142,14 +147,9 @@
      "data": {
       "text/plain": [
        "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'what is the color of the sky?',\n",
-       "   'answer': 'blue.'},\n",
-       "  {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'what is the color of the sky on that sunny day?',\n",
-       "   'answer': 'blue.'},\n",
-       "  {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': '. what is the color of the sky?',\n",
-       "   'answer': 'blue.'}]}"
+       "   'question': 'what color is the sky on a sunny day?',\n",
+       "   'answer': 'blue.'}],\n",
+       " 'error': 'Failed to deserialize 0 examples'}"
       ]
      },
      "execution_count": 7,
@@ -217,7 +217,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1063b7e20>"
+       "<graphviz.graphs.Digraph at 0x105e39540>"
       ]
      },
      "metadata": {},
@@ -261,15 +261,15 @@
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"130.68\" cy=\"-90\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"130.68\" y=\"-84.95\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
        "</g>\n",
-       "<!-- thread_1/few_shot_model_op_1 -->\n",
+       "<!-- thread_0/few_shot_model_op_2 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>thread_1/few_shot_model_op_1</title>\n",
+       "<title>thread_0/few_shot_model_op_2</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"130.68\" cy=\"-18\" rx=\"130.68\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"130.68\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">thread_1/few_shot_model_op_1</text>\n",
+       "<text text-anchor=\"middle\" x=\"130.68\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/few_shot_model_op_2</text>\n",
        "</g>\n",
-       "<!-- root&#45;&gt;thread_1/few_shot_model_op_1 -->\n",
+       "<!-- root&#45;&gt;thread_0/few_shot_model_op_2 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>root&#45;&gt;thread_1/few_shot_model_op_1</title>\n",
+       "<title>root&#45;&gt;thread_0/few_shot_model_op_2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M130.68,-71.7C130.68,-64.41 130.68,-55.73 130.68,-47.54\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"134.18,-47.62 130.68,-37.62 127.18,-47.62 134.18,-47.62\"/>\n",
        "</g>\n",
@@ -277,7 +277,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1063b5240>"
+       "<graphviz.graphs.Digraph at 0x105e3a020>"
       ]
      },
      "metadata": {},
@@ -287,13 +287,6 @@
    "source": [
     "display(graph)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
