--- a/example/model/lmqg_model.ipynb
+++ b/example/model/lmqg_model.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,15 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
     "\n",
     "from uniflow.client import Client\n",
     "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.config import LMQGConfig\n",
     "from uniflow.viz import Viz\n",
     "\n",
     "import en_core_web_sm\n",
@@ -53,21 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['LinearFlow',\n",
+       " 'FewShotModelFlow',\n",
        " 'ModelFlow',\n",
        " 'OpenAIJsonModelFlow',\n",
        " 'HuggingFaceModelFlow',\n",
-       " 'LMQGModelFlow',\n",
-       " 'FewShotModelFlow']"
+       " 'LMQGModelFlow']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,27 +108,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(\"LMQGModelFlow\")"
+    "config = LMQGConfig()\n",
+    "client = Client(config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 1258.79it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 1451.07it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 1584.55it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 1829.78it/s]\n",
-      "100%|██████████| 2/2 [00:01<00:00,  1.36it/s]\n"
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/models/auto/tokenization_auto.py:671: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
+      "  warnings.warn(\n",
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/models/auto/configuration_auto.py:1033: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
+      "  warnings.warn(\n",
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/modeling_utils.py:2570: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
+      "  warnings.warn(\n",
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/utils/hub.py:374: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
+      "  warnings.warn(\n",
+      "100%|██████████| 4/4 [00:00<00:00, 723.31it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 1652.28it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 1825.20it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 1640.32it/s]\n",
+      "100%|██████████| 2/2 [00:02<00:00,  1.14s/it]\n"
      ]
     }
    ],
@@ -128,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +160,7 @@
        " ('From where did William Turner view the city of Oxford?', 'Hinksey Hill.')]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +226,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f8675bcae00>"
+       "<graphviz.graphs.Digraph at 0x7f6c20642ec0>"
       ]
      },
      "metadata": {},
@@ -220,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -252,15 +271,15 @@
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"136.49\" cy=\"-90\" rx=\"29.8\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"136.49\" y=\"-86.3\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
        "</g>\n",
-       "<!-- thread_1/lmqg_model_op_1 -->\n",
+       "<!-- thread_0/lmqg_model_op_2 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>thread_1/lmqg_model_op_1</title>\n",
+       "<title>thread_0/lmqg_model_op_2</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"136.49\" cy=\"-18\" rx=\"136.48\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"136.49\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">thread_1/lmqg_model_op_1</text>\n",
+       "<text text-anchor=\"middle\" x=\"136.49\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/lmqg_model_op_2</text>\n",
        "</g>\n",
-       "<!-- root&#45;&gt;thread_1/lmqg_model_op_1 -->\n",
+       "<!-- root&#45;&gt;thread_0/lmqg_model_op_2 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>root&#45;&gt;thread_1/lmqg_model_op_1</title>\n",
+       "<title>root&#45;&gt;thread_0/lmqg_model_op_2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M136.49,-71.7C136.49,-63.98 136.49,-54.71 136.49,-46.11\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"139.99,-46.1 136.49,-36.1 132.99,-46.1 139.99,-46.1\"/>\n",
        "</g>\n",
@@ -268,7 +287,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f8675bcbbe0>"
+       "<graphviz.graphs.Digraph at 0x7f6b213d08e0>"
       ]
      },
      "metadata": {},
