--- a/example/model/self_instruct_pdf_source.ipynb
+++ b/example/model/self_instruct_pdf_source.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "8d84dd70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "from uniflow.client import Client\n",
+    "from uniflow.config import Config\n",
+    "from uniflow.model.config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n"
    ]
   },
@@ -52,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "a707ef78",
    "metadata": {},
    "outputs": [],
@@ -70,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "092b355a",
    "metadata": {},
    "outputs": [],
@@ -81,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +140,7 @@
        "    'answer': ''}]}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,23 +151,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(\"ModelFlow\")"
+    "config = Config(model_config=OpenAIModelConfig())\n",
+    "client = Client(config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:09<00:00,  9.94s/it]\n"
+      "100%|██████████| 1/1 [00:13<00:00, 13.16s/it]\n"
      ]
     }
    ],
@@ -166,26 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': [{'context': '11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole da y.\"\\n– Charles Dick ens\\nJuly 2009\\nOne reason progr ammers dislik e meetings so much is that they\\'re\\non a different t ype of schedule from other people. Meetings cost\\nthem more.\\nThere are two t ypes of schedule, which I\\'ll call the manager\\'s\\nschedule and the mak er\\'s schedule. The manager\\'s schedule is for\\nbosses. It\\'s embodied in the tr aditional appointment book, with\\neach da y cut into one hour interv als. Y ou can block off sev eral\\nhours for a single task if y ou need to , but b y default y ou change\\nwhat y ou\\'re doing ev ery hour .\\nWhen y ou use time that w ay, it\\'s merely a pr actical problem to\\nmeet with someone. Find an open slot in y our schedule, book\\nthem, and y ou\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s the\\nschedule of command. But there\\'s another w ay of using time\\nthat\\'s common among people who mak e things, lik e progr ammers\\nand writers. They gener ally prefer to use time in units of half a\\nday at least. Y ou can\\'t write or progr am well in units of an hour .\\nThat\\'s barely enough time to get started.\\nWhen y ou\\'re oper ating on the mak er\\'s schedule, meetings are a\\ndisaster . A single meeting can blow a whole afternoon, b y\\nbreaking it into two pieces each too small to do an ything hard in.\\nPlus y ou ha ve to remember to go to the meeting. That\\'s no\\nproblem for someone on the manager\\'s schedule. There\\'s alw ays\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the mak er\\'s schedule has a meeting, they\\nhave to think about it.\\nFor someone on the mak er\\'s schedule, ha ving a meeting is lik e\\nthrowing an ex ception. It doesn\\'t merely cause y ou to switch\\nfrom one task to another; it changes the mode in which y ou\\nwork.\\nI find one meeting can sometimes affect a whole da y. A meeting\\ncommonly blows at least half a da y, by breaking up a morning or\\nafternoon. But in addition there\\'s sometimes a cascading effect. If\\nI know the afternoon is going to be brok en up , I\\'m slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound o versensitiv e, but if y ou\\'re a mak er, think of y our own\\ncase. Don\\'t y our spirits rise at the thought of ha ving an entire da y\\nfree to work, with no appointments at all? W ell, that means y our\\nspirits are correspondingly depressed when y ou don\\'t. And\\nambitious projects are b y definition close to the limits of y our',\n",
-       "      'question': 'What are the two types of schedules mentioned in the context?',\n",
-       "      'answer': \"The manager's schedule and the maker's schedule.\"},\n",
-       "     {'context': '11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole da y.\"\\n– Charles Dickens\\nJuly 2009\\nOne reason programmers dislike meetings so much, is that they\\'re on a different type of schedule from other people. Meetings cost them more.\\nThere are two types of schedule, which I\\'ll call the manager\\'s schedule and the maker\\'s schedule. The manager\\'s schedule is for bosses. It\\'s embodied in the traditional appointment book, with each day cut into one-hour intervals. You can block off several hours for a single task if you need to, but by default, you change what you\\'re doing every hour.\\nWhen you use time that way, it\\'s merely a practical problem to meet with someone. Find an open slot in your schedule, book them, and you\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s the schedule of command. But there\\'s another way of using time that\\'s common among people who make things, like programmers and writers. They generally prefer to use time in units of half a day at least. You can\\'t write or program well in units of an hour. That\\'s barely enough time to get started.\\nWhen you\\'re operating on the maker\\'s schedule, meetings are a disaster. A single meeting can blow a whole afternoon, by breaking it into two pieces each too small to do anything hard in.\\nPlus you have to remember to go to the meeting. That\\'s no problem for someone on the manager\\'s schedule. There\\'s always something coming on the next hour; the only question is what.\\nBut when someone on the maker\\'s schedule has a meeting, they have to think about it.\\nFor someone on the maker\\'s schedule, having a meeting is like throwing an exception. It doesn\\'t merely cause you to switch from one task to another; it changes the mode in which you work.\\nI find one meeting can sometimes affect a whole day. A meeting commonly blows at least half a day, by breaking up a morning or afternoon. But in addition there\\'s sometimes a cascading effect. If I know the afternoon is going to be broken up, I\\'m slightly less likely to start something ambitious in the morning. I know this may sound oversensitive, but if you\\'re a maker, think of your own case. Don\\'t your spirits rise at the thought of having an entire day free to work, with no appointments at all? Well, that means your spirits are correspondingly depressed when you don\\'t. And ambitious projects are by definition close to the limits of your',\n",
-       "      'question': 'What are the two types of schedule described in the context?',\n",
-       "      'answer': \"The manager's schedule and the maker's schedule.\"},\n",
-       "     {'context': '11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole da y.\"\\n– Charles Dick ens\\nJuly 2009\\nOne reason progr ammers dislik e meetings so much is that they\\'re\\non a different t ype of schedule from other people. Meetings cost\\nthem more.\\nThere are two t ypes of schedule, which I\\'ll call the manager\\'s\\nschedule and the mak er\\'s schedule. The manager\\'s schedule is for\\nbosses. It\\'s embodied in the tr aditional appointment book, with\\neach da y cut into one hour interv als. Y ou can block off sev eral\\nhours for a single task if y ou need to , but b y default y ou change\\nwhat y ou\\'re doing ev ery hour .\\nWhen y ou use time that w ay, it\\'s merely a pr actical problem to\\nmeet with someone. Find an open slot in y our schedule, book\\nthem, and y ou\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s the\\nschedule of command. But there\\'s another w ay of using time\\nthat\\'s common among people who mak e things, lik e progr ammers\\nand writers. They gener ally prefer to use time in units of half a\\nday at least. Y ou can\\'t write or progr am well in units of an hour .\\nThat\\'s barely enough time to get started.\\nWhen y ou\\'re oper ating on the mak er\\'s schedule, meetings are a\\ndisaster . A single meeting can blow a whole afternoon, b y\\nbreaking it into two pieces each too small to do an ything hard in.\\nPlus y ou ha ve to remember to go to the meeting. That\\'s no\\nproblem for someone on the manager\\'s schedule. There\\'s alw ays\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the mak er\\'s schedule has a meeting, they\\nhave to think about it.\\nFor someone on the mak er\\'s schedule, ha ving a meeting is lik e\\nthrowing an ex ception. It doesn\\'t merely cause y ou to switch\\nfrom one task to another; it changes the mode in which y ou\\nwork.\\nI find one meeting can sometimes affect a whole da y. A meeting\\ncommonly blows at least half a da y, by breaking up a morning or\\nafternoon. But in addition there\\'s sometimes a cascading effect. If\\nI know the afternoon is going to be brok en up , I\\'m slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound o versensitiv e, but if y ou\\'re a mak er, think of y our own\\ncase. Don\\'t y our spirits rise at the thought of ha ving an entire da y\\nfree to work, with no appointments at all? W ell, that means y our\\nspirits are correspondingly depressed when y ou don\\'t. And\\nambitious projects are b y definition close to the limits of y our',\n",
-       "      'question': 'What two types of schedules are discussed in the context?',\n",
+       "[{'output': [{'response': [{'context': '11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole day.\"\\n– Charles Dickens\\nJuly 2009\\nOne reason programmers dislike meetings so much is that they\\'re\\non a different type of schedule from other people. Meetings cost\\nthem more.\\nThere are two types of schedule, which I\\'ll call the manager\\'s\\nschedule and the maker\\'s schedule. The manager\\'s schedule is for\\nbosses. It\\'s embodied in the traditional appointment book, with\\neach day cut into one hour intervals. You can block off several\\nhours for a single task if you need to, but by default you change\\nwhat you\\'re doing every hour.\\nWhen you use time that way, it\\'s merely a practical problem to\\nmeet with someone. Find an open slot in your schedule, book\\nthem, and you\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s the\\nschedule of command. But there\\'s another way of using time\\nthat\\'s common among people who make things, like programmers\\nand writers. They generally prefer to use time in units of half a\\nday at least. You can\\'t write or program well in units of an hour.\\nThat\\'s barely enough time to get started.\\nWhen you\\'re operating on the maker\\'s schedule, meetings are a\\ndisaster. A single meeting can blow a whole afternoon, by\\nbreaking it into two pieces each too small to do anything hard in.\\nPlus you have to remember to go to the meeting. That\\'s no\\nproblem for someone on the manager\\'s schedule. There\\'s always\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the maker\\'s schedule has a meeting, they\\nhave to think about it.\\nFor someone on the maker\\'s schedule, having a meeting is like\\nthrowing an exception. It doesn\\'t merely cause you to switch\\nfrom one task to another; it changes the mode in which you\\nwork.\\nI find one meeting can sometimes affect a whole day. A meeting\\ncommonly blows at least half a day, by breaking up a morning or\\nafternoon. But in addition there\\'s sometimes a cascading effect. If\\nI know the afternoon is going to be broken up, I\\'m slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound oversensitive, but if you\\'re a maker, think of your own\\ncase. Don\\'t your spirits rise at the thought of having an entire day\\nfree to work, with no appointments at all? Well, that means your\\nspirits are correspondingly depressed when you don\\'t. And\\nambitious projects are by definition close to the limits of your',\n",
+       "      'question': 'According to the article, what are the two types of schedules discussed?',\n",
        "      'answer': \"The manager's schedule and the maker's schedule.\"}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x166ad1090>}]"
+       "  'root': <uniflow.node.node.Node at 0x151ca44c0>}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -229,19 +235,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>11/6/23, 11:40 AM Maker's Schedule, Manager's ...</td>\n",
-       "      <td>What are the two types of schedules mentioned ...</td>\n",
-       "      <td>The manager's schedule and the maker's schedule.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11/6/23, 11:40 AM Maker's Schedule, Manager's ...</td>\n",
-       "      <td>What are the two types of schedule described i...</td>\n",
-       "      <td>The manager's schedule and the maker's schedule.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11/6/23, 11:40 AM Maker's Schedule, Manager's ...</td>\n",
-       "      <td>What two types of schedules are discussed in t...</td>\n",
+       "      <td>According to the article, what are the two typ...</td>\n",
        "      <td>The manager's schedule and the maker's schedule.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -251,21 +245,15 @@
       "text/plain": [
        "                                             context  \\\n",
        "0  11/6/23, 11:40 AM Maker's Schedule, Manager's ...   \n",
-       "1  11/6/23, 11:40 AM Maker's Schedule, Manager's ...   \n",
-       "2  11/6/23, 11:40 AM Maker's Schedule, Manager's ...   \n",
        "\n",
        "                                            question  \\\n",
-       "0  What are the two types of schedules mentioned ...   \n",
-       "1  What are the two types of schedule described i...   \n",
-       "2  What two types of schedules are discussed in t...   \n",
+       "0  According to the article, what are the two typ...   \n",
        "\n",
        "                                             answer  \n",
-       "0  The manager's schedule and the maker's schedule.  \n",
-       "1  The manager's schedule and the maker's schedule.  \n",
-       "2  The manager's schedule and the maker's schedule.  "
+       "0  The manager's schedule and the maker's schedule.  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
